--- a/style.css
+++ b/style.css
@@ -13,3 +13,10 @@ main {
 	width: 97.5%;
     }
 }
+
+#triangle-canvas {
+    width: 100%;
+    height: 10cm;
+    margin: 0 auto;
+    border: 1px solid black;
+}
