--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@ main {
     margin: 0 auto;
     border: 1px solid black;
 }
+
+.triangle-config-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
