--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@ main {
     border: 1px solid black;
 }
 
+.triangle-config-container-container {
+    width: 80%;
+    margin: 0 auto;
+}
+
 .triangle-config-container {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    margin: 2mm 0;
 }
